--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>sample react</title>
-</head>
-<body>
-  <div id="app1"></div>
-  <div id="app2"></div>
-  <script src =  "./dist/build/build.js"></script>
-</body>
-</html>      
+<!-- index.html -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Hidsence</title>
+  </head>
+  <body>
+    <div id="app-container"></div>
+    <script src="dist/app.js"></script>
+  </body>
+</html>
